# llm-feedback-control

./: .gitignore  CHANGELOG.md  LICENSE  README.md  auditor.py  feedback.py  hard_corpus.py  llm.py  prototype_test.py  pyproject.toml  quality_uplift.py  requirements.txt
.github/workflows/: ci.yml
aws/: launch.py  ssm.py
docs/: CHANGELOG.md  api.md  architecture.md  faq.md  index.md  results.md  usage.md
docs/manual/: 01-getting-started.md  02-how-it-works.md  03-api-reference.md  04-results.md  05-examples.md  05-faq.md  06-examples.md  06-faq.md  07-controllers-and-circuits.md
experiments/: hard_corpus.py  prototype_test.py  quality_uplift.py
src/llm_feedback_control/: __init__.py  __main__.py  auditor.py  circuits.py  critic.py  feedback.py  llm.py
tests/: test_circuits.py  test_core.py  test_critic.py
